Added model User (with email and password, create time and update time), now project has task and user models and can store data about tasks and users
